--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -137,3 +137,34 @@ blockquote.quote {
     color: #fff;
     background: #34495e;
 }
+//修改Toc样式
+.widget--toc {
+    // display:inline-block;
+    font-size: 16px;
+
+    #TableOfContents {
+        overflow-x: auto;
+        max-height: 70vh;
+        ol,
+        ul {
+            list-style-type: none;
+            margin: 0; 
+            padding: 0;
+        }
+        
+        li {
+            margin: 5px 10px;
+            padding: 6px; 
+            & > ol,
+            & > ul {
+                margin-top: 10px;
+                padding-left: 8px;
+                margin-bottom: -5px;
+                & > li:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+}
+
